Funcionalidad de mostrar notas

--- a/Bootcamp/practicas/pokemon_fullstack/client/src/App.css
+++ b/Bootcamp/practicas/pokemon_fullstack/client/src/App.css
@@ -16,3 +16,12 @@ Form{
     max-width: 800px;
     margin: 0 auto;
 }
+
+.container-notas{
+    padding: 50px;
+}
+
+.nota{
+    border:2px solid black;
+    margin-top: 20px;
+}
